# SPP-LSTM

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
.streamlit/: requirements.txt
src/: __init__.py  baseline_model.py  data_loader.py  gru_model.py  model.py  prediction.py  preprocessing.py  sp500_tickers.py  transformer_model.py
