[project]
name = "try-finance"
version = "0.1.0"
description = "Stock price prediction using LSTM"
requires-python = ">=3.11"
dependencies = [
    "yfinance>=0.2.31",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "tensorflow-cpu==2.15.0",
    "plotly>=5.17.0",
    "matplotlib>=3.7.0",
    "streamlit>=1.28.0",
    "python-dateutil>=2.8.2",
]
